# myCatan

./: Board.cpp  Board.hpp  CMakeLists.txt  Game.cpp  Game.hpp  GameLoop.cpp  GameLoop.hpp  Player.cpp  Player.hpp  Plot.cpp  Plot.hpp  README.md  Resource.cpp  Resource.hpp  Road.cpp  Road.hpp  Village.cpp  Village.hpp  development_card.cpp  development_card.hpp  input.txt  main.cpp  makefile
Tests/: InputCards.txt  InputTrading.txt  TestCounter.cpp  testBoard.cpp  testGame.cpp  testPlayer.cpp
